infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: www.thevouch-msc-fyp.shop
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/vouchers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: vouchers-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-srv
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: '1234-5678-9012-3456'
    service.beta.kubernetes.io/do-loadbalancer-protocol: 'https'
    # Uncomment once hello.example.com points to the external IP address of the DO load-balancer.
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.thevouch-msc-fyp.com'
spec:
  type: LoadBalancer
  selector:
    app: ingress-srv
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
